Fix layout issues on non-logged-in homepage

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -13,7 +13,7 @@ footer {
   bottom: 0;
   width: 100%;
   height: 200px;
-  padding: 50px 0;
+  padding: 4em 0;
   background-color: #f5f5f5;
 }
 
@@ -35,13 +35,7 @@ img {
   max-width: 100%;
 }
 
-@media screen and (max-width: 768px) {
-  .login-button {
-    display: block;
-    width: 80%;
-    margin: 0 auto 1em;
-  }
-}
+
 
 .main-content {
   margin-bottom: 2em;
@@ -131,4 +125,29 @@ img {
 
 .quote-meta {
   margin-bottom: 1em;
+}
+
+@media screen and (max-width: 768px) {
+  .login-button {
+    display: block;
+    width: 80%;
+    margin: 0 auto 1em;
+  }
+
+  .typewriter-container {
+    margin-top: 2em;
+  }
+
+  .landing-row {
+    padding-top: 2em;
+    padding-bottom: 2em;
+  }
+
+  footer {
+    padding: 2em 0;
+  }
+
+  .footer-copyright {
+    margin-top: 1em;
+  }
 }
